--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.105",
     "@types/react": "^18.3.4",
     "@types/react-dom": "^18.3.0",
+    "dotenv": "^16.4.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
@@ -41,6 +41,12 @@
     ]
   },
   "devDependencies": {
+    "@types/fabric": "^5.3.6",
+    "@types/node": "^22.5.0",
+    "canvas": "^2.11.2",
+    "fabric": "^5.3.0",
+    "node-canvas": "^2.9.0",
+    "recharts": "^2.12.7",
     "tailwindcss": "^3.4.10"
   }
 }
