--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     ]
   },
   "devDependencies": {
+    "@legendapp/state": "^3.0.0-alpha.30",
     "@types/fabric": "^5.3.6",
     "@types/node": "^22.5.0",
     "canvas": "^2.11.2",
